error page view

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -5,7 +5,10 @@ pl:
     choose_channel: "Wybierz kanał płatności poniżej i kliknij dalej, aby przetworzyć płatność"
     error:
       headline: "Błąd w przetwarzaniu płatności"
-      content: "Niestety wystąpił błąd w przetwarzaniu płatności przez Przelewy24.pl - prosimy spróbować ponownie. W razie powtarzających się problemów, prosimy o kontakt."
+      content: "Niestety wystąpił błąd w przetwarzaniu płatności przez Przelewy24.pl lub zostało ono anulowane - prosimy spróbować ponownie. W razie powtarzających się problemów, prosimy o kontakt."
+      order_comeback: "Powrót do zamówienia"
+      error_code: "Kod błędu:"
+      error_description: "Opis błędu:"
   payment_success: Płatność poprawna
   currency: Waluta
   p24_id_sprzedawcy: ID sprzedawcy
